<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="10px"
    android:paddingRight="10px"
    android:paddingBottom="10px"
    >
    <ImageView android:id="@+id/about_iv_icon"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:paddingTop="10px"
        android:paddingRight="10px"
        android:paddingBottom="10px"
        android:src="@drawable/ic_menu_3d_globe"
        />
    <TextView android:id="@+id/about_tv_app_name"
        android:layout_toRightOf="@id/about_iv_icon"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/language_picker_title"
        android:textSize="7pt"
        />
	<TextView android:id="@+id/about_tv_version"
        android:layout_alignRight="@id/about_tv_app_name"
        android:layout_below="@id/about_tv_app_name"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/version"
	    />
	<TextView android:id="@+id/about_tv_cc"
        android:layout_toRightOf="@id/about_iv_icon"
        android:layout_below="@id/about_tv_version"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="10px"
	    android:text="@string/creative_commons"
        android:textSize="6pt"
	    />
	<TextView android:id="@+id/about_tv_developer"
        android:layout_toRightOf="@id/about_iv_icon"
        android:layout_below="@id/about_tv_cc"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="10px"
	    android:text="@string/developer"
        android:textSize="6pt"
	    />
	<TextView android:id="@+id/about_tv_developer_url"
        android:layout_toRightOf="@id/about_iv_icon"
        android:layout_below="@id/about_tv_developer"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/developer_url"
	    android:autoLink="web"
	    />
    <TextView
        android:layout_below="@id/about_tv_developer_url"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10px"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/developed_in_osaka_japan"
        />
</RelativeLayout>
